# Pytorch_session4

./: .gitignore  HowTo.md  README.md  model.py  project_structure  pyproject.toml  requirements.txt  train.py  visualizer.py
static/: style.css
templates/: index.html
