[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-cnn-visualizer"
version = "0.1.0"
authors = [
    { name = "Utkarsh Mittal", email = "your.email@example.com" }
]
description = "A real-time visualization tool for training CNN on MNIST"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "flask>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
]

[project.urls]
"Homepage" = "https://github.com/mittalutkarsh/Pytorch_session4"
"Bug Tracker" = "https://github.com/mittalutkarsh/Pytorch_session4/issues" 